some code smells fixed